[tool.poetry]
name = "echomirror"
version = "0.2.3"
description = ""
authors = ["Spence Sellers <spencesellers@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.scripts]
echomirror = 'echomirror:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

