[project]
name = "echomirror"
version = "0.2.3"
description = ""
authors = [{ name = "Spence Sellers", email = "spencesellers@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "click>=8.1.7,<9",
    "requests>=2.31.0,<3",
]

[project.scripts]
echomirror = "echomirror:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

